# stm32-rtos-bsp-lcd-template

./: .mxproject  CMakeLists.txt  README.md  rtos_lcd.ioc
Core/Inc/: display.h  stm32h7xx_hal_conf.h
Core/Src/: display.c  freertos.c  gpio.c  main.c
cmake/stm32cubemx/: CMakeLists.txt
